fix(globalheadr): fix sublist spacing on mobile

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -1037,7 +1037,7 @@ i {
     content: '';
     display: block;
     width: 100%;
-    height: 20px;
+    height: 0;
   }
 }
 
